<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/geometry_background" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Nameview"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editname"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/viewmail"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toEndOf="@+id/Nameview"
        app:layout_constraintStart_toStartOf="@+id/Nameview"
        app:layout_constraintTop_toBottomOf="@+id/Nameview" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:id="@+id/passwordview"
        android:hint="@string/password1"
        app:layout_constraintEnd_toEndOf="@+id/viewmail"
        app:layout_constraintStart_toStartOf="@+id/viewmail"
        app:layout_constraintTop_toBottomOf="@+id/viewmail" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:id="@+id/editpassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:id="@+id/repasswordview"
        android:hint="@string/re_password"
        app:layout_constraintEnd_toEndOf="@+id/passwordview"
        app:layout_constraintStart_toStartOf="@+id/passwordview"
        app:layout_constraintTop_toBottomOf="@+id/passwordview" >>
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:id="@+id/editre_password"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:hint="@string/birthday_date"
        app:layout_constraintEnd_toEndOf="@+id/repasswordview"
        app:layout_constraintStart_toStartOf="@+id/repasswordview"
        app:layout_constraintTop_toBottomOf="@+id/repasswordview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editdate"
            android:inputType="datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/gender_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:id="@+id/male"
            android:text="@string/male"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/female"
            android:text="@string/female"/>


    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gender"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:id="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_option" />

    <TextView
        android:id="@+id/result"
        android:layout_width="329dp"
        android:layout_height="94dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="52dp"
        android:layout_height="39dp"
        android:layout_marginTop="104dp"
        app:layout_constraintStart_toEndOf="@+id/viewmail"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_mail_24" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="56dp"
        android:layout_height="47dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/ic_baseline_date_range_24" />

</androidx.constraintlayout.widget.ConstraintLayout>